--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <title>Ryan Reiterman's Responsive Layout</title>
   </head>
 
-  <body>
+<body>
 
  <div class="wrapper">
 
 <!-- Main navigation -->
 
-      <div class="container-header clearfix">
-         <header class="main-header">
-          <h1 class="name">Ryan Reiterman</h1>
-            <ul class="main-nav">
-  					  <li><a href="#">Home</a></li>
-  					  <li><a href="#">Portfolio</a></li>
-  					  <li><a id="contact">Contact</a></li>
-  			  	</ul>
-        </header>
-      </div>
+   <div class="container-header clearfix">
+
+    <header id="top">
+      <h1 id="home" class="name">Ryan Reiterman</h1>
+        <nav>
+          <ul class="main-nav">
+    				 <li><a href="#home">Home</a></li>
+    				 <li><a href="#portfolio">Portfolio</a></li>
+             <li><a target="new" href="files/reiterman.pdf">Resume</a></li>
+    				 <li><a href="#contact">Contact</a></li>
+    			</ul>
+        </nav>
+      </header>
+
+    </div>
 
 <!-- Profile content -->
 
-
-
   <div class="container-profile clearfix">
 
-    <img src="images/responsive-layout-profile.png" alt="Profile Picture" class="profile-pic">
+    <img src="images/ryan-and-lucy.jpg" alt="Profile Picture" class="profile-pic">
 
     <p class="profile-text">
       Hi! My name is Ryan Reiterman, and I am an aspiring front-end web developer.
@@ -44,58 +48,90 @@
 
 <!-- Projects -->
 
+    <main>
 
-  <div class="project-wrapper clearfix">
+      <div class="project-wrapper clearfix">
 
-    <div class="container-1 clearfix">
-      <img src="images/portfolio-1.png" alt="First Portfolio Project" class="portfolio-pic">
-      <h3>Marketing Page</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
+        <h2 id="portfolio">Portfolio</h2>
+
+        <div class="container-1 clearfix">
+          <img src="images/portfolio-1.png" alt="First Portfolio Project" class="portfolio-pic">
+          <h3>Marketing Page</h3>
+          <p class="portfolio-text">This project shows the front page of a marketing website meant
+            for a specific business I'm interested in.</p>
+        </div>
+
+        <div class="container-2 clearfix">
+          <img src="images/portfolio-2.png" alt="Second Portfolio Project" class="portfolio-pic">
+          <h3>Search Page</h3>
+          <p class="portfolio-text">This project searches through a specific database to find
+            information that the user is trying to look up.</p>
+        </div>
+
+        <div class="container-3 clearfix">
+          <img src="images/portfolio-3.png" alt="Third Portfolio Project" class="portfolio-pic">
+          <h3>Travel App</h3>
+          <p class="portfolio-text">This project compares travel times based on different transportation
+            methods and tells you the best one.</p>
+        </div>
+
+        <div class="container-4 clearfix">
+          <img src="images/portfolio-4.png" alt="Fourth Portfolio Project" class="portfolio-pic">
+          <h3>Map of Favorite Spots</h3>
+          <p class="portfolio-text">This project uses mapping APIs to plot points for my favorite spots
+            in the city for a do-it-yourself walking tour.</p>
+        </div>
+
+        <div class="container-5 clearfix">
+          <img src="images/portfolio-5.png" alt="Fifth Portfolio Project" class="portfolio-pic">
+          <h3>Photo Gallery</h3>
+          <p class="portfolio-text">This project shows pictures from a recent trip to the viewer and allows
+            them to easily navigate through photos.</p>
+        </div>
+
+        <div class="container-6 clearfix">
+          <img src="images/portfolio-6.png" alt="Sixth Portfolio Project" class="portfolio-pic">
+          <h3>Calculator</h3>
+          <p class="portfolio-text">Someone can enter in the numbers they want, and press the big blue
+            button and get the result.</p>
+        </div> <!-- Container -->
+
+      </div>  <!-- Projects Wrapper -->
+
+    </main>
+
+      </div>  <!--Wrapper -->
+
+  <footer class="main-footer">
+
+    <div class="contact-wrapper">
+
+      <h3 class="contact"><a href="#contact">Contact</a></h3>
+      <p class="contact-info">If you're interested in chatting or want more information
+        about what I've been working on, I'd love to hear from you!</p>
+      <p class="contact-info">Phone: 614-419-5592</p>
+      <p class="contact-info">Email: <a href="mailto:ryreiterman@gmail.com?subject=Feedback">ryreiterman@gmail.com</a></p>
+
     </div>
 
-    <div class="container-2 clearfix">
-      <img src="images/portfolio-2.png" alt="Second Portfolio Project" class="portfolio-pic">
-      <h3>Search Page</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
-    </div>
+      <div class="container-footer clearfix">
 
-    <div class="container-3 clearfix">
-      <img src="images/portfolio-3.png" alt="Third Portfolio Project" class="portfolio-pic">
-      <h3>Travel App</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
-    </div>
+        <h4 id="contact" class="name-footer">Ryan Reiterman</h4>
 
-    <div class="container-4 clearfix">
-      <img src="images/portfolio-4.png" alt="Fourth Portfolio Project" class="portfolio-pic">
-      <h3>Map of Favorite Spots</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
-    </div>
+        <h4 class="footer-top"><a href="#top">Back to Top</a></h4>
 
-    <div class="container-5 clearfix">
-      <img src="images/portfolio-5.png" alt="Fifth Portfolio Project" class="portfolio-pic">
-      <h3>Photo Gallery</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
-    </div>
+          <nav>
+            <ul class="footer-nav">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a target="new" href="files/reiterman.pdf">Resume</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
 
-    <div class="container-6 clearfix">
-      <img src="images/portfolio-6.png" alt="Sixth Portfolio Project" class="portfolio-pic">
-      <h3>Calculator</h3>
-      <p class="portfolio-text">This project shows off a marketing page for a company in Orlando, Fla.</p>
-
-    </div> <!-- Container -->
-  </div>  <!-- Projects Wrapper -->
-  </div>  <!--Wrapper -->
-
-  <footer>
-
-    <h3 class="contact"><a href="#contact">Contact</a></h3>
-    <p class="contact-info">TKTKTKTKTKKTKTKTKTKTK</p>
-    <p class="contact-info">Phone: 614-419-5592</p>
-    <p class="contact-info">Email: <a href="mailto:ryreiterman@gmail.com?subject=Feedback">ryreiterman@gmail.com</a></p>
-
+      </div> <!-- Container Footer -->
   </footer>
 
-
-
   </body>
+
 </html>
